# LSDirect-DataAnalyst-Task

./: EMAILS.html  EMAILS.md  analysis.ipynb  pyproject.toml
data/: ALL_DATA.parquet
