[tool.poetry]
name = "lsdirect-challenge"
version = "1.0"
description = ""
authors = ["Alex Oswald <aoswald609@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.15"
pandas = "^2.2.1"
plotly = "^5.20.0"
seaborn = "^0.13.2"
nbformat = "^5.10.2"
pyarrow = "^15.0.1"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
